--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,8 @@ header {
     color: #FFFFFF;
     text-align: center;
     margin: 0 auto 39px;
-    background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%), url("../images/Rectangle 3.png") center/cover;
+    background: url("../images/Rectangle 3.png") center/cover;
+    /*background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%), url("../images/Rectangle 3.png") center/cover;*/
 }
 
 .hero-h1 {
